--- a/conf.yaml
+++ b/conf.yaml
@@ -1,9 +1,9 @@
 # OSROOM官方默认主题配置
 # 主题名必须和主题主目录一致
-theme_name: inventory-sys
+theme_name: inventory-sys-theme
 author: Allen Woo
 theme_uri: www.osroom.com/theme
-introduce: 电商库存系统, 需配合OSROOM插件inventory_sys_plugin使用
+introduce: 在osroom默认主题上加了个电商库存页面, 需配合OSROOM插件inventory_sys_plugin使用
 cover_path: static/sys_imgs/cover.png
 version: v0.1
 license: BSD-2
